scenarios/argo/fakeimages/k3s/istio/istio-vs-vcluster-k3s-122-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vcluster-k3s-122
  namespace: k3s
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/vcluster
  tls:
  - match:
    - port: 443
      sniHosts:
      - "vcluster-k3s-122"
    route:
    - destination:
        host: vcluster-k3s-122
        port:
          number: 443
